--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 </head>
 <body>
 
-   <header class=" w-full sticky top-0 z-50   bg-black py-6">
-    <div class="max-w-[1320px] mx-auto px-6 flex justify-between items-center">
+   <header class=" w-full sticky top-0 z-50   bg-black py-6  px-6 ">
+    <div class="max-w-[1320px] mx-auto flex justify-between items-center">
   <!-- Logo -->
   <img src="assets/Images/Rectangle 5.svg" alt="Entrepreneurship Summit Logo" class="w-[180px] lg:w-[245px] h-auto">
 
@@ -199,6 +199,7 @@ the Entrepreneurship Summit
     </div>
   </div>
 </section>
+
 
 
 
