--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
   <!-- Register Button (hidden on small, visible md+) -->
   <div class="hidden lg:block">
-    <a href="#" class="header-btn">Register Now</a>
+    <a href="#register" class="header-btn">Register Now</a>
   </div>
 
   <!-- Mobile Menu Button -->
@@ -50,7 +50,7 @@
     <li><a href="#about" class="nav-link">About</a></li>
     <li><a href="#who-should-attend" class="nav-link">Who should attend</a></li>
     <li><a href="#why-attend" class="nav-link">Why attend</a></li>
-    <li><a href="#" class="header-btn inline-block">Register Now</a></li>
+    <li><a href="#register" class="header-btn inline-block">Register Now</a></li>
   </ul>
 </nav>
 
@@ -59,8 +59,8 @@
   <div class="flex flex-col justify-center items-center h-full text-center px-6 max-w-[850px] mx-auto">
     <h1>Fueling Innovation Empowering Leaders</h1>
     <div class=" space-x-2 md:space-x-8">
-<a href="#" class="btn">Learn More</a>
-<a href="#" class="btn">Register Now</a>
+<a href="#about" class="btn">Learn More</a>
+<a href="#register" class="btn">Register Now</a>
     </div>
     </div>
 
@@ -75,7 +75,7 @@
             <p>The Entrepreneurship Summit is a dynamic gathering designed to inspire, equip, and connect the next generation of business leaders, innovators, and change-makers. With a focus on practical strategies and bold ideas, the Summit highlights the tools and insights needed to launch, grow, and sustain successful ventures in today’s competitive landscape.<br><br>  
 
 Through engaging keynote talks, interactive workshops, and meaningful networking opportunities, attendees will gain fresh perspectives on leadership, innovation, funding, and scaling. Whether you’re an aspiring entrepreneur, a seasoned business owner, or someone with a vision ready to take shape, the Entrepreneurship Summit provides the resources and community to help you turn ideas into lasting impact.</p>
-        <a href="#" class="btn">Register Now</a>
+        <a href="#register" class="btn">Register Now</a>
 </div>
 
   <div class="w-full md:w-1/2 overflow-hidden rounded-3xl h-auto md:h-[550px]">
@@ -174,7 +174,7 @@ data-aos="zoom-in"
 
 <!-- Register Today section  -->
 
-<section id="register-today" class="py-16 lg:py-32 px-6  " style="background-image: linear-gradient(to left top, #000000, #0d0d0d, #161616, #1d1d1d, #242424);">
+<section id="register" class="py-16 lg:py-32 px-6  " style="background-image: linear-gradient(to left top, #000000, #0d0d0d, #161616, #1d1d1d, #242424);">
     <div class="max-w-[1320px] mx-auto">
     <div style="background-image: url(assets/Images/iStock-913327824.jpg); background-size: cover; background-position: center; " class="flex flex-col justify-center items-center text-center py-50 px-2 rounded-3xl">
         <h2 class="large-heading">Register Today!</h2>
@@ -243,7 +243,7 @@ Boston, MA 02116
 
         </div>
 
-        <div class="flex flex-col md:flex-row justify-between items-end mt-10 ">
+        <div class="flex flex-col md:flex-row justify-between md:items-end mt-10 ">
             <div class="flex flex-col [&_a]:underline [&_a]:hover:text-[#00CDFF] text-white font-[500] text-[16px] font-Montserrat  mt-10">
                 <a href="#">Privacy Policy</a>
                 <a href="#">Terms of use</a>
