--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@ Boston, MA 02116
 
             </div>
 
-            <div class="[&_a]:hover:text-[#00CDFF] text-white mt-5 md:mt-0 text-[16px]">
+            <div class="[&_a]:hover:text-[#00CDFF] [&_a]:underline text-white mt-5 md:mt-0 text-[16px]">
                 <p><a href="#">Copyright © 2025 The Innovation</a> Tech Summit. All Rights Reserved.</p>
             </div>
         </div>
