--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
 <section id="about" class="bg-black py-[60px] lg:py-[120px] px-6  relative" >
     <div class="flex flex-col md:flex-row gap-10 justify-center items-center max-w-[1320px] mx-auto" >
-        <div class="w-full md:w-[50%] [&_a]:mt-5 pr-10">
+        <div class="w-full md:w-[50%] [&_h3]:mb-10 [&_a]:mt-5 pr-10">
             <h3>About The Entrepreneurship Summit</h3>
             <p>The Entrepreneurship Summit is a dynamic gathering designed to inspire, equip, and connect the next generation of business leaders, innovators, and change-makers. With a focus on practical strategies and bold ideas, the Summit highlights the tools and insights needed to launch, grow, and sustain successful ventures in today’s competitive landscape.<br><br>  
 
