--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ the Entrepreneurship Summit
 
 <!-- last section   -->
  
-<section class="bg-black relative">
+<section class="bg-black relative px-6 pb-50 md:pb-0">
   <div class="relative h-[200px] lg:h-[300px] max-w-[1320px] mx-auto px-6 ">
     <div class="absolute -top-10 lg:-top-15 left-0  ">
       <h4>
